--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ h1{
 
   gtag('config', 'G-1VJV94FVF0');
 </script>
+	<embed name="CasinoNight" src="https://github.com/ThePropHat/POQ/blob/main/pilotredsun-Achievement-03-casin.mp3" loop="true" hidden="true" autostart="true"> 
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
 <h1 class="rainbow"> Under construction. Check back soon!<h1>
