--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ h1{
 
   gtag('config', 'G-1VJV94FVF0');
 </script>
-	<embed name="CasinoNight" src="https://www.quackit.com/music/good_enough.mp3" loop="true" hidden="true" autostart="true"> 
+	<embed name="CasinoNight" src="https://www.quackit.com/music/good_enough.mp3" loop="false" hidden="true" autostart="true"> 
+	
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
 <h1 class="rainbow"> Under construction. Check back soon!<h1>
