--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ h1{
 
   gtag('config', 'G-1VJV94FVF0');
 </script>
-	<embed name="CasinoNight" src="pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> 
+	<audio>
+	<embed name="CasinoNight" src="https://www.quackit.com/music/good_enough.mp3" loop="false" hidden="true" autostart="true"> 
+	</audio>
 	
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
