--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ h1{
 
   gtag('config', 'G-1VJV94FVF0');
 </script>
-	<audio>
-	<embed name="CasinoNight" src="https://www.quackit.com/music/good_enough.mp3" loop="false" hidden="true" autostart="true"> 
-	</audio>
+	
+	<video controls autoplay name="media">
+	<source src="https://www.quackit.com/music/good_enough.mp3" type="audio/mpeg">
 	
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
