--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ h1{
   gtag('config', 'G-1VJV94FVF0');
 </script>
 	
-	<video controls autoplay name="media">
-	<source src="https://www.quackit.com/music/good_enough.mp3" type="audio/mpeg">
+	<embed name="GoodEnough" src="/music/good_enough.mp3" loop="false" hidden="true" autostart="true">
 	
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
