--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ h1{
   gtag('config', 'G-1VJV94FVF0');
 </script>
 	
-	<embed name="GoodEnough" src="/music/good_enough.mp3" loop="false" hidden="true" autostart="true">
+	<embed name="GoodEnough" src="POQ/pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true">
 	
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
