--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ h1{
   gtag('config', 'G-1VJV94FVF0');
 </script>
 	
-	<embed name="GoodEnough" src="https://github.com/ThePropHat/POQ/blob/main/pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> </embed>
+	<embed name="GoodEnough" src="https://www.quackit.com/music/good_enough.mp3" loop="false" hidden="true" autostart="true"> </embed>
 	
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
