--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ h1{
 </style>
 
 <body>
-	<embed name="GoodEnough" src="https://www.quackit.com/music/good_enough.mp3" loop="false" hidden="true" autostart="true"> </embed>
+	<embed name="GoodEnough" src="pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> </embed>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VJV94FVF0"></script>
