--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
 </script>
 
 <body>
+  	<embed name="GoodEnough" src="pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> </embed>
+
  <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 
 <header>
