--- a/quiz.html
+++ b/quiz.html
@@ -8,6 +8,10 @@
 
 </head>
 <body>
+  
+  	<embed name="GoodEnough" src="pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> </embed>
+
+  
  <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 <header>
 
