--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@ h1{
 
 <body>
 	
-	<audio src="pilotredsun-Achievement-03-casin.mp3" id="my_audio" loop="loop"></audio>
-  <script type="text/javascript">
-    window.onload=function(){
-      document.getElementById("my_audio").play();
-    }
-  </script>
-
+	<iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+	
+	 <audio id="player" autoplay loop>
+    <source src="POQ/pilotredsun-Achievement-03-casin.mp3" type="audio/mp3">
+</audio>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VJV94FVF0"></script>
