--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1{
 
 <body>
 	
-	<iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+	<iframe src="https://github.com/anars/blank-audio/blob/master/1-second-of-silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 	
 	 <audio id="player" autoplay loop>
     <source src="POQ/pilotredsun-Achievement-03-casin.mp3" type="audio/mp3">
