--- a/index.html
+++ b/index.html
@@ -22,10 +22,8 @@ h1{
 	
 	<iframe src="https://github.com/anars/blank-audio/blob/master/1-second-of-silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
 	
-	 <audio id="player" autoplay loop>
-    <source src="POQ/pilotredsun-Achievement-03-casin.mp3" type="audio/mp3">
-</audio>
-	
+	<embed name="GoodEnough" src="pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> </embed>
+	 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VJV94FVF0"></script>
 <script>
