--- a/quiz.html
+++ b/quiz.html
@@ -27,8 +27,12 @@
 
     <ul>
       <li><a  href="webfront.html">Home</a></li>
-      <br>
+    
+      <li><a href="about.html">About</a></li>
+
       <li><a class="active" href="quiz.html">Quiz</a></li>
+
+      <li><a  href="wizard.html">The Wizard Gif</a></li>
       <br>
       
 
