--- a/wizard.html
+++ b/wizard.html
@@ -17,6 +17,7 @@
 </script>
 
 <body>
+  pilotredsun-Achievement-04-warsa.mp3
  <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 
 <header>
