--- a/wizard.html
+++ b/wizard.html
@@ -17,7 +17,10 @@
 </script>
 
 <body>
-  pilotredsun-Achievement-04-warsa.mp3
+  
+  	  	<embed name="GoodEnough" src="pilotredsun-Achievement-04-warsa.mp3" loop="false" hidden="true" autostart="true"> </embed>
+
+  
  <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 
 <header>
