--- a/index.html
+++ b/index.html
@@ -16,6 +16,27 @@ h1{
 	text-align: center;
 	color: #00653A;
 }
+	/**CSS**/ 
+.wrapper { 
+	width: 200px; 
+	height: 200px; 
+	position: relative; 
+} 
+ 
+.wrapper img { 
+	width: 100%; 
+	height: 100%; 
+} 
+ 
+.wrapper a { 
+	width: 100%; 
+	height: 100%; 
+	display: block; 
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+} 
+	
 </style>
 
 <body>
@@ -36,6 +57,13 @@ h1{
 <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 	<div id="shadowBox">
 <h1 class="rainbow"> Under construction. Check back soon!<h1>
+
+<div class="wrapper"> 
+	<img src="https://votefortyler.xyz/images/tumblr_mghbo6GRFQ1qz4tfgo1_400.gif"> 
+	<a href="webfront.html">Some link</a> 
+</div> 
+ 
+
 	<img src="https://votefortyler.xyz/images/tumblr_mghbo6GRFQ1qz4tfgo1_400.gif">
 </div>
 <center>
