--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang = "en">
 <head>
@@ -18,8 +17,8 @@ h1{
 }
 	/**CSS**/ 
 .wrapper { 
-	width: 200px; 
-	height: 200px; 
+	width: 312px; 
+	height: 116px; 
 	position: relative; 
 } 
  
@@ -29,12 +28,12 @@ h1{
 } 
  
 .wrapper a { 
-	width: 100%; 
-	height: 100%; 
+	width: 39px; 
+	height: 22px; 
 	display: block; 
 	position: absolute; 
-	top: 0; 
-	left: 0; 
+	bottom: 22px; 
+	left: 14px; 
 } 
 	
 </style>
@@ -58,13 +57,13 @@ h1{
 	<div id="shadowBox">
 <h1 class="rainbow"> Under construction. Check back soon!<h1>
 
+<center>
 <div class="wrapper"> 
 	<img src="https://votefortyler.xyz/images/tumblr_mghbo6GRFQ1qz4tfgo1_400.gif"> 
-	<a href="webfront.html">Some link</a> 
+	<a href="webfront.html"></a> 
 </div> 
- 
+ </center>
 
-	<img src="https://votefortyler.xyz/images/tumblr_mghbo6GRFQ1qz4tfgo1_400.gif">
 </div>
 <center>
 <img src="https://votefortyler.xyz/images/VoteTylerLogoBG.png" alt="votefortyler.png" width="300" height="400">
@@ -76,5 +75,3 @@ h1{
 <img src="https://votefortyler.xyz/images/browser1.gif">
 
 </center>
-
-<!-- if you can see this you should tell me that you found this secret message. also what are you doing checking my code, that is very rude and i am Very Embarrassed by my code.--/>
