--- a/about.html
+++ b/about.html
@@ -47,17 +47,20 @@
 
 </header>
 
-  
+  <div class="span11"
   <!-- Main body text -->
   <article>
     <h1>For those who were not a part of our team at Jennifer Heil Starbucks for the duration of my <i> very</i> successful campaign for the prestegious award of Partner of the Quarter, I welcome you to your first experience! I started this project in the beginnings of 2021 in an attempt to bring some fun and lightheartedness to the store. There were many tough weeks for us all and I felt as though something could be done to lighten everyone's mood, and give people a joke they can all be a part of. The original campaign was intended to coincide and make light of the controversial and tumultuous 2020 United States election, as well as give people something else to focus on and talk about rather than the boring and upsetting politics of the real world. Why engross yourself in the icky sticky world of real politics when you can instead endulge in my very own fake fantasy political world! One filled with weird websites, poorly printed posters, and more money spent than I'd care to disclose! <br>I hope in this campaign you take it upon yourself to not vote for me because I told you to, but to vote for the partner who you truely believe to be the Starbucks Partner of the Quarter. <br> Just kidding bwl I want you to vote for me and only me because voting for me is the only real option. </h1>
+  </article>
+</div>
 <br>
 <center>
     <img src="https://votefortyler.xyz/images/world.gif">
     </center>
 <br>
-    <h1> If you would like to see more stuff like this, please let me know! I love feedback and the enthusiasm you guys had for the last campaign is what inspired this one to begin with. Also if you would like to see the "Under Construction" page this site used to have, or if you didn't get to see if you can <a href="index.html"> visit it here! </a> </h1>
-
+<div class="span6">
+    <h1 class="rainbow"> If you would like to see more stuff like this, please let me know! I love feedback and the enthusiasm you guys had for the last campaign is what inspired this one to begin with. Also if you would like to see the "Under Construction" page this site used to have, or if you didn't get to see if you can <a href="index.html"> visit it here! </a> </h1>
+</div>
 <!-- Secret text -->
       <p> if you see this vote for chuck e cheese </p>
 
