--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1{
 	text-align: center;
 	color: #00653A;
 }
-	/**CSS**/ 
+	/**Secrect Entrence**/ 
 .wrapper { 
 	width: 312px; 
 	height: 116px; 
