--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
     </center>
 <br>
 <div class="span6">
-    <h1 class="rainbow"> If you would like to see more stuff like this, please let me know! I love feedback and the enthusiasm you guys had for the last campaign is what inspired this one to begin with. Also if you would like to see the "Under Construction" page this site used to have, or if you didn't get to see if you can <a href="index.html"> visit it here! </a> </h1>
+    <h1 class="rainbow"> If you would like to see more stuff like this, please let me know! I love feedback, and the enthusiasm you guys had for the last campaign is what inspired this one to begin with. Also if you would like to see the "Under Construction" page this site used to have, or if you didn't get to see if you can <a href="index.html"> visit it here! </a> </h1>
 </div>
 <!-- Secret text -->
       <p> if you see this vote for chuck e cheese </p>
