--- a/quiz.html
+++ b/quiz.html
@@ -11,6 +11,16 @@
   
   	  	<embed name="GoodEnough" src="pilotredsun-Achievement-04-warsa.mp3" loop="false" hidden="true" autostart="true"> </embed>
   
+  <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1VJV94FVF0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1VJV94FVF0');
+</script>
+  
  <body style="background-image: url('https://votefortyler.xyz/images/stars.gif');">
 <header>
 
