--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <link rel="stylesheet" href="https://votefortyler.xyz/webfront.css">
-<title>Vote for Tyler!</title>
+<title>About - Vote for Tyler!</title>
 <meta charset="utf-8">
 </head>
 
