--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
   <link rel="stylesheet" href="webfront.css">
-<title>Vote for Tyler!</title>
+<title>Quiz | Vote for Tyler!</title>
 <meta charset="utf-8">
 
 
