--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  	<embed name="GoodEnough" src="pilotredsun-Achievement-03-casin.mp3" loop="false" hidden="true" autostart="true"> </embed>
+  	<embed name="GoodEnough" src="pilotredsun-Achievement-03-casin.mp3" loop="true" hidden="true" autostart="true"> </embed>
 
   <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VJV94FVF0"></script>
