--- a/quiz.html
+++ b/quiz.html
@@ -35,7 +35,7 @@
 <section>
 
     <ul>
-      <li><a  href="webfront.html">Home</a></li>
+      <li><a  href="index.html">Home</a></li>
     
       <li><a href="about.html">About</a></li>
 
