--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section>
 
     <ul>
-      <li><a class="active" href="webfront.html">Home</a></li>
+      <li><a class="active" href="index.html">Home</a></li>
     
       <li><a href="about.html">About</a></li>
 
