--- a/construction.html
+++ b/construction.html
@@ -2,11 +2,11 @@
 <html lang = "en">
 <head>
 
-
-
 <link rel="stylesheet" href="webfront.css">
 <title>Vote for Tyler!</title>
 <meta charset="utf-8">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet"> 
 </head>
 
 <style>
