--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="https://votefortyler.xyz/webfront.css">
 <title>About | Vote for Tyler!</title>
 <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
