--- a/quiz.html
+++ b/quiz.html
@@ -51,7 +51,7 @@
 </header>
   
   <article>
-    <h1>Enter now, get a sticker! Or else!</h1>
+    <h1>Enter now, win a sticker! Or else!</h1>
     <p align="center">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUAD6P6DgFFCmCa2pYeSmw8mBN3SK0MqMYt2cyaiiWaBMmoA/viewform?embedded=true" width="640" height="377" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   </p>
